# Django-Project-2

./: README.md  pyproject.toml
catalogtwo/: apps.py  urls.py
catalogtwo/templates/main/: contact.html  index.html
config/: settings.py  urls.py
