[tool.poetry]
name = "django-project-2"
version = "0.1.0"
description = ""
authors = ["Геннадий"]
readme = "README.md"
packages = [{include = "django_project_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
